2006-02-15  Jim Meyering  <jim@meyering.net>

	* lib/verify.h: New file, from gnulib.

2006-02-15  Claudio Fontana  <claudio@gnu.org>

	* libidu/scanners.c: integrated a lisp+java support patch,
	  based on the original work by Edouard G. Parmelan
	
2006-01-11  Claudio Fontana  <claudio@gnu.org>

	* lib/fnmatch.c, lib/fnmatch_loop.c: included workaround for a
	  possible gcc bug in handling multibyte char sequences.
	  Fix by Paul Eggert <eggert@gnu.org>, problems reported by
	  Nelson H. F. Beebe <beebe@math.utah.edu>

	* src/mkid.c, src/lid.c: replace dirname() and basename() usage
	  with dir_name() and base_name() to fix a portability problem
	  spotted by Nelson H. F. Beebe <beebe@math.utah.edu>

2006-01-08  Claudio Fontana  <claudio@gnu.org>

	* src/mkid.c: fixed bad offtostr usage (now uses return value)

2006-01-06  Claudio Fontana  <claudio@gnu.org>

	* configure.ac: reverted change to "conditionally add -I ../intl to the
	  CFLAGS to let all subdirs find the included libintl.h"
	* m4/gettext.m4: offer a more general solution to the above problem,
	  by automatically adding the internal intl directory to the CPPFLAGS
	  when used.
	* lib/regex_internal.h: apply workaround for buggy pgcc preprocessor
	  handling large unsigned 64 bit values as signed, and thus breaking
	  compilation. Fix by Paul Eggert <eggert@gnu.org>, catch by
	  Nelson H. F. Beebe <beebe@math.utah.edu>

	* distribute.sh: changed id-utils to idutils
	* distribute-alpha.sh: likewise
	* BLURB: likewise
	* README-alpha: likewise

	* configure.ac: changed bug report address to bug-idutils@gnu.org

	* doc/id-utils.texi: renamed to doc/idutils.texi, and fixed content
	  accordingly
	* doc/Makefile.am: reflect filename change

	* lisp/id-utils.el: renamed to lisp/idutils.el, and fixed content
	  accordingly
	* lisp/Makefile.am: reflect filename change

	* po/*.po: replaced bug-id-utils@gnu.org with bug-idutils@gnu.org


2005-12-27  Claudio Fontana  <claudio@gnu.org>
